--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <a class="navbar-brand" href="#">Report</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Regulated Water Contaminants</a></li>
+      <li class="active"><a href="#">rRegulated Water Contaminants</a></li>
     </ul>
   </div>
 </nav>
